[package]
name = "gittidy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
reqwest = "0.11.17"
rpassword = "7.2.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
