[package]
name = "privateer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
console = "0.15.5"
dialoguer = "0.10.4"
dotenv = "0.15.0"
indicatif = "0.17.3"
reqwest = "0.11.17"
rpassword = "7.2.0"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
termion = "2.0.1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
incremental = true
codegen-units = 1
debug = false      # production
